--- a/MT.MvcUI/bin/MT.MvcUI.dll.config
+++ b/MT.MvcUI/bin/MT.MvcUI.dll.config
@@ -14,6 +14,11 @@
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
+
+  <connectionStrings>
+    <add name="dbCentroMedicoContainer" connectionString="metadata=res://*/dbModel.dbCentroMedico.csdl|res://*/dbModel.dbCentroMedico.ssdl|res://*/dbModel.dbCentroMedico.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MGWSLPT550;initial catalog=CentroMedico;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
